--- a/src/assets/components/Profile/Profile.module.css
+++ b/src/assets/components/Profile/Profile.module.css
@@ -1,29 +1,67 @@
 .profile {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #e4e4e4;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  background-color: #fff;
 }
 
 .description {
+  margin-bottom: 20px;
 }
 
 .avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  border: 2px solid #e4e4e4;
 }
 
 .name {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 8px;
 }
 
-.tag {
-}
-
+.tag,
 .location {
+  font-size: 16px;
+  color: #999;
+  margin-bottom: 4px;
 }
 
 .stats {
+  display: flex;
+  justify-content: space-around;
+  background-color: #f3f6f9;
+  border-top: 1px solid #e4e4e4;
+  padding: 10px 0;
+  border-radius: 0 0 8px 8px;
 }
 
 .stats li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 33.33%;
+  padding: 8px;
+  border-right: 1px solid #e4e4e4;
+  &:last-child {
+    border-right: none;
+  }
 }
 
 .label {
+  font-size: 12px;
+  color: #777;
 }
 
 .quantity {
+  font-weight: 700;
+  font-size: 16px;
+  color: #2a2a2a;
 }
