--- a/src/assets/components/FriendListItem/FriendListItem.module.css
+++ b/src/assets/components/FriendListItem/FriendListItem.module.css
@@ -2,6 +2,9 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  flex-direction: column;
+  border: 1px solid black;
+  padding: 10px;
 }
 
 .name {
