--- a/src/assets/components/FriendListItem/FriendListItem.module.css
+++ b/src/assets/components/FriendListItem/FriendListItem.module.css
@@ -4,17 +4,20 @@
   margin-bottom: 10px;
   flex-direction: column;
   border: 1px solid black;
-  padding: 10px;
+  border-radius: 6px;
+  padding: 15px;
+  margin: 0;
 }
 
 .name {
   margin-left: 10px;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 500;
+  margin: 0;
 }
 
 .status {
-  margin-left: 10px;
+  margin: 0;
   font-size: 16px;
 }
 
